<resources>
    <string name="app_name">Expert Here</string>
    <string name="apikey" translatable="false">MYAPI123</string>
    <string name="google_maps_api_key" translatable="false">AIzaSyAtZkerAuqL6UNiN3SL3IEEXHgYcJKAzVw</string>
    <string name="FcmSendUrl" translatable="false">https://fcm.googleapis.com/v1/projects/expert-here-9f4de/messages:send</string>
    <string name="default_notification_channel_id" translatable="false">1</string>
    <string name="app_tag_line">India’s best home service \n #provider</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">open Drawer\n</string>
    <string name="navigation_drawer_close">close drawer\n</string>
    <string name="title_activity_more_reviews">MoreReviewsActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_categories_list">CategoriesListActivity</string>
    <string name="select_account_type">Select Account type?</string>
    <string name="individual">Individual</string>
    <string name="organization">Organization</string>
    <string name="about_us">About Us</string>
    <string name="categories">Categories</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_amp_coditions"><![CDATA[Terms & Coditions]]></string>
    <string name="edit_your_profile">Edit Your Profile</string>
    <string name="set_new_photo">Set new Photo</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="name">Name</string>
    <string name="profession">Profession</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="verify_email_nvia_otp">Verify Email\nVia OTP</string>
    <string name="code_send_to">Code send to</string>
    <string name="change">change</string>
    <string name="resend_in">Resend in</string>
    <string name="complete_verification">Complete verification</string>
    <string name="enter_6_digit_verification_code_xxxxxx">Enter 6 digit verification code XXXXXX</string>
    <string name="step_into_a_world_of_comfort_and_convenience_with_expert_your_sanctuary_awaits_where_seamless_living_meets_modern_convenience_unlock_the_door_to_a_smarter_home_experience_where_every_room_is_designed_with_you_in_mind">Step into a world of comfort and convenience with Expert. Your sanctuary awaits, where seamless living meets modern convenience. Unlock the door to a smarter home experience, where every room is designed with you in mind.</string>
    <string name="get_started_with">Get Started with,</string>
    <string name="welcome_to_expert_here_nconnecting_home_service_providers_with_ease">Welcome to Expert Here \nConnecting Home Service Providers with Ease</string>
    <string name="why_choose_expert_here">Why Choose Expert Here?</string>
    <string name="join_comm">\nJoin a community of skilled professionals dedicated to providing top-notch home services.Expert Here is your gateway to:\n • Expanded Reach: Connect with a broader customer base seeking your expertise.\n • Effortless Scheduling: Manage your appointments seamlessly through our user-friendly platform.\n • Secure Payments: Enjoy hassle-free transactions with our secure payment system.\n • Transparent Ratings: Build trust with customers through transparent ratings and reviews.</string>
    <string name="get_started_in_3_easy_steps">Get Started in 3 Easy Steps:</string>
    <string name="stringkamka">\n1. Create Your Profile: Showcase your skills and experience to attract potential clients.\n2. Browse Service Requests: Explore service requests in your area and choose the ones that match your expertise.\n3. Connect and Serve: Engage with customers, schedule appointments, and provide exceptional services.</string>
    <string name="learn_more_on">Learn more on</string>
    <string name="lets_go">Lets Go</string>
    <string name="create_new_account">Create New Account!</string>
    <string name="already_have_account">Already Have Account?</string>
    <string name="become_a_patner">Become a patner!</string>
    <string name="partner_login">Partner Login</string>
    <string name="service_place">Service Place?</string>
    <string name="choose_service_place">Choose service place?</string>
    <string name="your_address_will_show_here">Your Address Will Show Here!</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="search_your_place">Search Your place?</string>
    <string name="lets_sign_you_in">Lets Sign you in</string>
    <string name="welcome_back_nyou_have_been_missed">Welcome Back ,\nYou have been missed</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="or">or</string>
    <string name="don_t_have_an_account">Don’t have an account ?</string>
    <string name="register_now">Register Now</string>
    <string name="password">Password</string>
    <string name="ongoing_call">Ongoing call..</string>
    <string name="all_reiews">All Reiews</string>
    <string name="no_reviews_available">No Reviews Available !</string>
    <string name="create_order">Create Order</string>
    <string name="select_date_and_time">Select Date And Time</string>
    <string name="select_service">Select Service</string>
    <string name="create_and_add">Create and Add</string>
    <string name="customer_name">Customer Name</string>
    <string name="address">Address</string>
    <string name="delete_review">Delete Review</string>
    <string name="your_review">Your review</string>
    <string name="hey_users_give_your_review_as_your_service_experience_choose_start_for_rating_as_your_experience">Hey users, give your review as your service experience choose start for rating as your experience</string>
    <string name="handy_men_work_image">Handy men work image</string>
    <string name="work_image_1_1">Work Image 1:1</string>
    <string name="your_review_and_work_image_will_be_public_for">Your review and work Image will be public for</string>
    <string name="welcome_to_expert_here">Welcome to Expert Here</string>
    <string name="your_expert_hub_service_provider">Your Expert Hub Service Provider!</string>
    <string name="why_join_us_nat_exper_here_we_believe_in_fostering_a_community_of_experts_dedicated_to_delivering_exceptional_services_by_joining_us_you_become_part_of_a_dynamic_platform_that_connects_you_with_a_diverse_range_of_clients_seeking_your_expertise_whether_you_re_a_seasoned_professional_or_a_rising_star_in_your_field_our_platform_provides_the_perfect_stage_for_you_to_showcase_your_skills_and_connect_with_customers_who_value_your_unique_talents">🚀 Why Join Us? \nAt Exper Here, we believe in fostering a community of experts dedicated to delivering exceptional services. By joining us, you become part of a dynamic platform that connects you with a diverse range of clients seeking your expertise. Whether you\'re a seasoned professional or a rising star in your field, our platform provides the perfect stage for you to showcase your skills and connect with customers who value your unique talents.</string>
    <string name="privacy_policy_nwe_prioritize_the_security_and_confidentiality_of_both_our_service_providers_and_customers_our_robust_privacy_policy_ensures_that_your_personal_information_is_handled_with_the_utmost_care_and_is_never_compromised_trust_is_the_foundation_of_our_platform_and_we_are_committed_to_maintaining_the_highest_standards_of_privacy_and_security_to_create_a_safe_and_trustworthy_environment_for_everyone">🔐 Privacy Policy \nWe prioritize the security and confidentiality of both our service providers and customers. Our robust privacy policy ensures that your personal information is handled with the utmost care and is never compromised. Trust is the foundation of our platform, and we are committed to maintaining the highest standards of privacy and security to create a safe and trustworthy environment for everyone.</string>
    <string name="profit_through_connection_with_your_customers_nat_expert_here_we_understand_that_your_success_is_our_success_by_joining_our_platform_you_gain_access_to_a_vast_network_of_potential_clients_actively_seeking_the_services_you_offer_maximize_your_earnings_and_broaden_your_professional_reach_by_connecting_with_customers_who_appreciate_your_expertise_we_provide_the_tools_and_support_you_need_to_turn_every_interaction_into_a_profitable_opportunity">💼 Profit through Connection with Your Customers.\nAt Expert Here, we understand that your success is our success. By joining our platform, you gain access to a vast network of potential clients actively seeking the services you offer. Maximize your earnings and broaden your professional reach by connecting with customers who appreciate your expertise. We provide the tools and support you need to turn every interaction into a profitable opportunity.</string>
    <string name="get_started_today_ndon_t_miss_out_on_the_incredible_opportunities_that_await_you_at_your_company_name_join_us_today_and_embark_on_a_journey_of_professional_growth_meaningful_connections_and_financial_success_your_expertise_deserves_a_platform_that_values_and_rewards_your_skills_and_that_platform_is_your_company_name_welcome_aboard_and_here_s_to_a_thriving_partnership">🤝 Get Started Today!\nDon\'t miss out on the incredible opportunities that await you at [Your Company Name]. Join us today and embark on a journey of professional growth, meaningful connections, and financial success. Your expertise deserves a platform that values and rewards your skills - and that platform is [Your Company Name]. Welcome aboard, and here\'s to a thriving partnership!</string>
    <string name="n1_create_your_profile_showcase_your_skills_and_experience_to_attract_potential_clients_n2_browse_service_requests_explore_service_requests_in_your_area_and_choose_the_ones_that_match_your_expertise_n3_connect_and_serve_engage_with_customers_schedule_appointments_and_provide_exceptional_services">\n1. Create Your Profile: Showcase your skills and experience to attract potential clients.\n2. Browse Service Requests: Explore service requests in your area and choose the ones that match your expertise.\n3. Connect and Serve: Engage with customers, schedule appointments, and provide exceptional services.</string>
    <string name="accept_privacy_policy">Accept Privacy policy</string>
    <string name="register_now_as_service_provider">Register now as service provider</string>
    <string name="delete_service">Delete Service</string>
    <string name="are_you_sure_you_want_to_delete_this_service">Are you sure you want to delete this service?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="enter_email_to_send_code">Enter Email To Send Code!</string>
    <string name="submit">Submit</string>
    <string name="profile">Profile</string>
    <string name="internet_connection_is_required_to_proceed_with_your_operation_the_system_cannot_connect_to_the_main_server_without_internet_access_please_check_your_internet_connection">Internet connection is required to proceed with your operation. The system cannot connect to the main server without internet access. Please check your internet connection</string>
    <string name="no_internet">(: No Internet</string>
    <string name="retry">Retry</string>
    <string name="try_after_some_time">Try after some time?</string>
    <string name="in_coming">In coming</string>
    <string name="out_going">Out going</string>
    <string name="home">Home</string>
    <string name="services">Services</string>
    <string name="reviews">Reviews</string>
    <string name="call_history">Call history</string>
    <string name="bookmark">Bookmark</string>
</resources>