<!-- res/layout/dialog_custom_layout.xml -->
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:layout_marginHorizontal="20dp"
    app:cardBackgroundColor="@color/widgets_background"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_weight="1"
            android:textColor="@color/text_color"
            android:fontFamily="@font/outfit"
            android:text="@string/select_account_type"
            android:textAlignment="textEnd"
            android:textSize="@dimen/_13sdp" />

        <RadioButton
            android:id="@+id/radioIndividual"
            android:textColor="@color/text_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/individual" />

        <RadioButton
            android:id="@+id/radioOrganization"
            android:textColor="@color/text_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/organization" />


    </LinearLayout>
</androidx.cardview.widget.CardView>
