<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/widgets_background"
    android:padding="@dimen/_10sdp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_email_to_send_code"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:gravity="center"
        android:textColorHint="@null"
        app:cursorColor="@color/black"
        app:expandedHintEnabled="true"
        app:hintTextColor="@color/text_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4sdp"
            android:fontFamily="@font/outfit"
            android:hint="@string/email"
            android:maxLines="1"            android:importantForAutofill="noExcludeDescendants"

            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_10sdp"
            android:textSize="@dimen/_13sdp" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/black"
        android:text="@string/submit"
        android:textColor="@color/white" />

</LinearLayout>
